--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="somefont.css"
     </head>
     <body>
-        Test from bash
-        <a href="https://netology.ru">Netology</a>
+        <h1>Demo</h1>
+        <footer>Copyright 2019</footer>
     </body>
 </html>
